tests/files/lexer_tests/should_fail/001.cmdr
// Illegal character in string (ascii 1)
var = '';